[package]
name = "iroh-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.114"
iroh = { version = "0.97", default-features = false }
wasm-bindgen-futures = "=0.4.64"
wasm-streams = "=0.4.2"
anyhow = "1.0.102"
n0-future = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tokio = { version = "1.52.0", features = ["sync"] }
tokio-stream = "0.1.18"
async-channel = "2.5.0"

[profile.release]
strip = true
lto = true
panic = "abort"
